--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -244,9 +244,6 @@ table {
 }
 
 .rte-video {
-  background: $black;
-  width: 100%;
-  height: 480px;
   video {
     @include box(100%);
     object-fit: contain;
